cmake_minimum_required(VERSION 3.6)
project(UAV_SIM_CV)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE RELEASE)
find_package(OpenCV REQUIRED)
find_package(X11 REQUIRED)
set(SOURCE_FILES main.cpp)
add_executable(UAV_SIM_CV ${SOURCE_FILES})
target_link_libraries(UAV_SIM_CV ${OpenCV_LIBS}  ${X11_LIBRARIES} pthread)